force-app/main/default/objects/Security_Finding__c/Security_Finding__c.object-meta.xml
<CustomObject>
    <description>Security findings detected by SecOps Health scans.</description>
    <label>Security Finding</label>
    <nameField>
        <displayFormat>SF-{0000000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Findings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>