force-app/main/default/objects/Security_Finding__c/fields/Action_History__c.field-meta.xml
<CustomField>
    <fullName>Action_History__c</fullName>
    <label>Action History</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>