force-app/main/default/objects/Security_Finding__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <formula>Detection_Rule__c &amp; &quot;|&quot; &amp; CASESAFEID(Subject_User__c) &amp; &quot;|&quot; &amp; Source_Event_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composite Key</label>
    <type>Text</type>
</CustomField>