force-app/main/default/objects/Security_Finding__c/fields/Detection_Rule__c.field-meta.xml
<CustomField>
    <fullName>Detection_Rule__c</fullName>
    <label>Detection Rule</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>