force-app/main/default/objects/Security_Finding__c/fields/Dismissal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissal_Reason__c</fullName>
    <label>Dismissal Reason</label>
    <type>TextArea</type>
</CustomField>