force-app/main/default/objects/Security_Finding__c/fields/Resolved_At__c.field-meta.xml
<CustomField>
    <fullName>Resolved_At__c</fullName>
    <label>Resolved At</label>
    <type>DateTime</type>
</CustomField>