force-app/main/default/objects/Security_Finding__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Findings (Resolved By)</relationshipLabel>
    <relationshipName>Security_Findings_Resolved_By</relationshipName>
    <type>Lookup</type>
</CustomField>