force-app/main/default/objects/Security_Finding__c/fields/Scan_Run__c.field-meta.xml
<CustomField>
    <fullName>Scan_Run__c</fullName>
    <label>Scan Run</label>
    <referenceTo>SecOps_Scan_Run__c</referenceTo>
    <relationshipLabel>Security Findings</relationshipLabel>
    <relationshipName>Security_Findings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>