force-app/main/default/objects/Security_Finding__c/fields/Source_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Event_Id__c</fullName>
    <label>Source Event Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>