force-app/main/default/objects/Security_Finding__c/fields/Source_Event_Json__c.field-meta.xml
<CustomField>
    <fullName>Source_Event_Json__c</fullName>
    <label>Source Event JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>