force-app/main/default/objects/Security_Finding__c/fields/Subject_App__c.field-meta.xml
<CustomField>
    <fullName>Subject_App__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject App</label>
    <referenceTo>OAuth_App_Inventory__c</referenceTo>
    <relationshipLabel>Security Findings (Subject App)</relationshipLabel>
    <relationshipName>Security_Findings_Subject_App</relationshipName>
    <type>Lookup</type>
</CustomField>