force-app/main/default/objects/Security_Finding__c/fields/Subject_User__c.field-meta.xml
<CustomField>
    <fullName>Subject_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Security Findings</relationshipLabel>
    <relationshipName>Security_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>