force-app/main/default/objects/Security_Finding__c/listViews/All_Open_Findings.listView-meta.xml
<ListView>
    <fullName>All_Open_Findings</fullName>
    <columns>NAME</columns>
    <columns>Severity__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Resolved</value>
    </filters>
    <label>All Open Findings</label>
</ListView>